# SurveyMasterthesis

./: README.md  pyproject.toml  requirements.txt
survey_corinna_heinze/: settings.py
survey_corinna_heinze/_static/global/: style.css
survey_corinna_heinze/checks/: Checks.html  FailedChecks.html  __init__.py
survey_corinna_heinze/closing/: Closing.html  Closing2.html  __init__.py
survey_corinna_heinze/cognitive_load/: CognitiveLoad.html  __init__.py
survey_corinna_heinze/consent/: Consent.html  __init__.py
survey_corinna_heinze/control_measures/: ControlMeasures.html  __init__.py
survey_corinna_heinze/example_trials/: PracticeFeedback.html  PracticeIntro.html  Stage1.html  Stage2.html  __init__.py
survey_corinna_heinze/example_trials/data/: tasks_example_trials.csv
survey_corinna_heinze/instructions/: AIInstructions.html  Instructions.html  TasksInstructions.html  __init__.py
survey_corinna_heinze/main_trials/: MainTrialsIntro.html  Stage1.html  Stage2.html  __init__.py
survey_corinna_heinze/main_trials/data/: tasks_main_trials.csv
survey_corinna_heinze/manipulation_check/: ManipulationCheck.html  __init__.py
survey_corinna_heinze/trial_framework/: AI_support_box.html  Stage1.html  Stage2.html  __init__.py  common.py
survey_corinna_heinze/utils/: __init__.py  feature_builder.py  feature_config.py  formatting.py
